remove some extra things in language or hospital admin section

--- a/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
+++ b/src/Screens/hospital_Admin/translations/en_json_proofread_13072020.json
@@ -479,292 +479,19 @@
 		"for_pres_req_doc_require": "For Precription request Doctor is required",
 		"share_health_status": "Share Health Status",
 		"share_health_status_info_from_journal": "This will share your health status info from your journal, as this is needed for the doctor to be able to approve your prescription request.",
-		"see_list_shared_info": "See list of shared information",
-		"share_ur_jounral_status": "Share journal health status with Doctor",
-		"country_u_live": "Country you live in",
-		"dieseases_etc": "Diseases (Heart, Malignant, Pulmonary, Musculosceletal ...)",
-		"allergies": "Allergies",
-		"health_issue": "Health issues (Diabetes, Hypertension ...)",
-		"doc_and_statnderd_ques": "Doctor and standard questions",
-		"doc_aimedis_private": "Doctor (Aimedis & Private)",
-		"how_u_feeling": "How are you feeling",
-		"is_ur_temp_high_to_38": "Is your temperature higher than 38 °C",
-		"which_symptoms_do_u_hav": "Which symptoms do you have",
-		"since_when": "Since when",
-		"have_u_already_been_sick": "Have you already been sick at home for the same problem",
-		"how_long_do_u_unable_to_work": "How long do you think you will be unable to work",
-		"days": "days",
-		"it_is_known_dieseas": "Is it a known disease",
-		"r_u_tracking_medi": "Are you taking any medication",
-		"do_u_hv_allergies": "Do you have any allergies",
-		"ur_profession": "Your Profession",
-		"Annotations": "Annotations",
 		"details": "Details",
-		"questions": "questions",
-		"is_this_follow_pres": "Is this a follow-up prescription",
-		"how_u_like_rcv_pres": "How would you like to receive the prescription",
-		"Medicine": "Medicine",
-		"Substance": "Substance",
-		"Dose": "Dose",
-		"two_fac_auth_enable":"2-factor authentication is enabled",
-		"mg": "mg",
-		"trade_name": "Trade name",
-		"atc_if_applicable": "ATC code if applicable",
-		"manufacturer": "Manufacturer",
-		"pack_size": "Pack size",
-		"select": "Select",
-		"Status": "Status",
-		"sent": "Sent",
-		"on": "on",
-		"request": "request",
-		"Pending": "Pending",
-		"Rejected": "Rejected",
-		"Answered": "Answered",
-		"Cancelled": "Cancelled",
-		"req_updated_successfully": "Request updated Sucessfully",
-		"Case": "Case",
-		"again": "again",
-		"modify": "Modify",
-		"see": "See",
-		"cancel": "Cancel",
-		"what_ur_profession": "What is your profession",
-		"show": "Show",
-		"hide": "Hide",
-		"until": "Until",
-		"Week_or_more": "Week or more",
-		"today": "Today",
-		"yesterday": "Yesterday",
-		"ago": "ago",
-		"trackers": "Trackers",
-		"self_data": "Self Data",
-		"more": "More",
-		"connect": "Connect",
-		"devices": "Devices",
-		"services": "Services",
-		"search_for_device_palce": "Search for device or service name...",
-		"view_details": "View Details",
-		"Details": "Details",
-		"Questions": "Questions",
-		"book": "Book",
 		"logout": "Logout",
-		"view_data": "View data",
-		"disconect_device": "Disconnect device",
-		"distance": "Distance",
-		"steps": "Steps",
-		"total": "Total",
-		"best": "Best",
-		"badges": "Badges",
-		"earned": "Earned",
-		"model": "Model",
 		"type": "Type",
-		"timezone": "TimeZone",
-		"session": "Session",
-		"no_device_connctd": "No devices connected",
-		"ur_connected_device_appear": "Your connected devices will appear here",
-		"connct_a_device": "Connect a device",
-		"blockchain_access_log": "Blockchain Access Log",
 		"profile_setting": "Profile Settings",
-		"log_type": "Log type",
-		"created_by": "Created by",
-		"time_created": "Time created",
-		"ur_emergancy_data": "Your Emergency Data",
-		"extra": "Extra",
-		"srvc": "Service",
-		"activated": "Activated",
-		"past_apointment": "Past Appointment",
-		"hide_past_appointment": "Hide Past Appointments",
-		"deactivated": "deactivated",
-		"srvc_not_updt_cannt_reach_srvr": "Service is not updated. Can not reach to server",
-		"doc_around_clock": "Doc Around the Clock",
-		"cntct_aimedis_medi_team_24_7": "Contact the Aimedis medical team 24 / 7 for questions",
-		"data_srvcs": "Data Services",
-		"stay_upto_date_orgnize_data": "Stay up to date and let Aimedis organize your medical data",
-		"available": "Available",
-		"activate": "Activate",
-		"secnd_openion": "Second Opinion",
-		"emrgancy_patient_data": "Emergency Patient Data",
 		"online_course": "Online Courses",
-		"extra_srvc": "Extra Services",
-		"jrnl_archive": "Journal Archive",
-		"doc_require_for_second_openion": "For Second Opinion request Doctor is required",
-		"specilist_and_secnd_openion": "Specialist and standard questions",
-		"how_wuld_u_like_rcv_scnd_openion": "How would you like to receive the Second Opinion",
-		"ur_profesion": "Your profession",
-		"attachments": "Attachments",
-		"rqst_sent_succefully": "Request sent Sucessfully",
-		"archive_journal": "Archive Journal",
 		"archive": "Archive",
 		"archives": "Archives",
-		"about": "About",
-		"specialist": "Specialist",
 		"previous": "Previous",
 		"next": "Next",
-		"journal": "Journal",
-		"vdo_calls": "Videocalls",
 		"add_new": "Add new",
 		"entry": "entry",
-		"blood_pressure": "Blood Pressure",
-		"blood_sugar": "Blood Sugar",
-		"condition_pain": "Condition and Pain",
-		"covid_diary": "Covid-19 Diary",
-		"diagnosis": "Diagnosis",
-		"travel": "Travel",
-		"traveled": "Traveled",
-		"diary": "Diary",
-		"diary_note": "Diary Notes",
-		"doc_visit": "Doctor Visit",
-		"family_anmnies": "Family Anamnesis",
-		"file_uplod": "Files Upload",
-		"hosp_visit": "Hospital Visit",
-		"lab_result": "Laboratory Result",
-		"marcumar_pass": "Marcumar pass",
-		"medication": "Medication",
-		"smoking_status": "Smoking Status",
-		"vaccination": "Vaccination",
-		"vaccinated_by": "Vaccinated by",
-		"date_of_vaccination": "Date of Vaccination",
-		"weight_bmi": "Weight & BMI",
-		"personalize_dashbrd": "Personalize dashboard",
-		"date_measure": "Date Measured",
-		"time_measure": "Time Measured",
-		"visible": "Visible",
-		"always": "Always",
-		"when": "When",
-		"from": "From",
-		"rr_systolic": "RR Systolic",
-		"feeling": "Feeling",
-		"RR_diastolic": "RR Diastolic",
-		"view_fullscren": "View in fullscreen",
-		"situation": "Situation",
-		"selct_pain_area": "Select Pain areas",
-		"pain_areas": "Pain areas",
-		"temparture": "Temparture",
-		"saturation": "saturation",
-		"Location": "location",
-		"pain_type": "Pain type",
-		"pain_quality": "Pain quality",
-		"slct_ICD_serch_code": "Select an ICD catalogue and search for code",
-		"enter_code_serch_by_keyword": "Enter code or search by keywords",
-		"dignose": "Diagnose",
-		"review": "Review",
-		"by": "by",
-		"emergency": "Emergency",
-		"diagnosed": "Diagnosed",
-		"allergy": "Allergy",
-		"date_doc_visit": "Date Dcotor Visit",
-		"day_doc_visit": "Doctor Day Visit",
-		"welcome": "Welcome",
-		"ur_helthcare_on_blockchain": "Your healthcare platform on the Blockchain",
-		"we_hv_prpared_short_introductry": "We’ve prepared a short introductory video which sums all the benefits",
-		"u_get_from_aimedis": "you get from using the Aimedis platform.",
-		"entry_example": "Entry example",
-		"journal_entry": "Journal entry",
-		"example": "Example",
-		"mild_depresive_episode": "Mild depressive episode",
-		"team": "Team",
-		"example_entry_of_journal_timline_etc": "This is an example entry on your journal timeline. All entries, such as “Diagnosis”, “Doctor visits”, “Laboratory results” and more, will appear here.",
-		"date_of_dieses_patient": "Date of disease onset (Patient)",
-		"date_of_death": "Date of Death (if applicable)",
-		"disease_name": "Disease Name",
-		"gender_of_relatives": "Gender of relative",
-		"relation_of_relative": "Relation with relative",
-		"all_time": "All time",
-		"type_2": "Type: (2)",
-		"doc_all": "Doctor: All",
-		"facility_all": "Facility: All",
-		"sort_by": "Sort by",
-		"clear_filter": "Clear filters",
-		"file_uploads": "File Uploads",
-		"hosp_name": "Hospital Name",
-		"hosp_id": "Hospital ID",
-		"doc_id": "Doctor ID",
-		"first_visit_day": "First Visit Day",
-		"last_visit_day": "Last Visit Day",
-		"save_entry": "Save entry",
-		"entry_time": "Entry time",
-		"dig_time": "Diagnosis time",
-		"enter_value": "Enter Value",
-		"unit": "Unit",
-		"upr_limit": "Upper Limit",
-		"lwr_limit": "Lower Limit",
-		"lab_parameter": "Laboratory Parameter",
-		"value": "Value",
-		"enter_a_sbstnce": "Enter a substance",
-		"atc_code": "ATC Code",
-		"ur_trade_name": "Your Trade Name",
-		"enter_dosage": "Enter a dosage",
-		"prescribed": "Prescribed",
-		"specific_date": "Specific Date",
-		"interval": "Interval",
-		"to_be_consume": "To be comsumed at",
-		"reminder": "Reminder",
-		"reminder_time_taken": "Reminder time taken",
-		"notes": "Notes",
-		"ongoing": "ongoing",
-		"on_demand": "On Demand",
-		"dosage": "Dosage",
-		"time_taken": "Time Taken",
-		"quik_value": "Quick Value",
-		"INR": "INR",
-		"pill_taken": "Pills Taken",
-		"marcumer_pass": "Marcumar Pass",
-		"prsnalize_a_dashbord_drag_recorder": "Personalize your dashboard by adding or removing cards. Drag to reorder.",
-		"add_more_cards": "Add more cards",
-		"depression": "Depression",
-		"multiple_lesions_again_suggest": "Multiple lesions again suggest chronic demyelination. Mild atrophy greatest in the frontal region may be associated with multiple sclerosis. Findings appear stable when compared with the prior study. There is no abnormal enhancement.",
-		"add_profile": "Add profile",
-		"picture": "picture",
-		"cmplt_ur_profile": "Complete your profile",
-		"weight": "Weight",
-		"height": "Height",
-		"blood": "Blood",
-		"BMI": "BMI",
-		"no_data_avlbl": "No data available",
-		"last_doc_visit": "Last doctor visits",
-		"upcming_appointment": "Upcoming appointment",
-		"neurology": "Neurology",
-		"Office": "Office",
-		"Video": "Video",
-		"last_document": "Last Documents",
-		"view_all": "View all",
-		"temp_headech": "Temperature and headaches",
-		"open": "Open",
-		"date_of_dignose": "Date of diagnose",
-		"show_entry": "Show this entry",
-		"hide_entry": "Hide this entry",
-		"show_after": "Show after",
 		"slct_time_slot": "Select time slot",
-		"holiday": "Holiday",
-		"appointment_booked": "Appointment booked successfully",
-		"upcming_apointment": "Upcoming appointments",
-		"office_visit": "Office visit",
-		"cancel_apointmnt": "Cancel appointment",
-		"show_past_apointment": "Show past appointments",
-		"plz_write_short_explnation": "Please write a short explanation of why you have to cancel the appointment. Thank you.",
-		"short_msg": "Short message",
-		"appointments": "Appointments",
-		"arrng_apointmnt": "Arrange an appointment",
-		"sync_ur_calander": "Sync to your calendar",
-		"search_within": "Search within",
-		"range": "range",
-		"see_avlbl_date": "SEE AVAILABLE DATES FOR",
-		"vdo_call": "Video call",
-		"consultancy_cstm_calnder": "Consultancy (custom calendar)",
-		"location_of_srvc": "Location of service",
-		"find_apointment": "Find Appointment",
-		"allow_location_access": "Allow location access",
-		"this_way_can_instntly_list_of_specility": "This way we can instantly show you a list of specialists.",
-		"for_geting_emrgancy_data_on_a_click": "For getting the Emergency Data of a patient Click on the Button",
-		"emrgncy_data_access": "Emergency Data Access",
-		"emrgancy_access_for_non_connected": "Emergency access for non-connected patient",
-		"I_hrwith_cnfirm_that_i_need_access_patient": "I herewith confirm that I need to access the patient's data due to a medical emergency situation the patient will be informed about that",
-		"time_format": "Time format",
-		"date_format": "Date format",
 		"my_profile": "My Profile",
-		"male": "Male",
-		"female": "Female",
-		"other": "Other",
-		"Patients": "Patients",
 		"find_patient": "Find a patient...",
 		"find_doctor": "Find a Doctor...",
 		"find_nurse": "Find a Nurse...",
@@ -892,6 +619,14 @@
 		"incomingcall": "Incoming call",
 		"Liscence" :"license",
 		"capab_Patients" :"Patients",
-		"capab_Hospitals": "Hospitals"
+		"capab_Hospitals": "Hospitals",
+		"srvc_Doctors": "Doctors",
+		"Nurse": "Nurse",
+		"Patient": "Patient",
+		"cancel": "Cancel",
+		"Doctor": "Doctor",
+		"two_fac_auth_enable":"The 2-factor authentication is activated",
+		"Status" :"Status"
 	}
 }
+
