--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -1051,7 +1051,6 @@
     "plz_check_unread_message_in_chat":"непрочитанные сообщения в чате. Пожалуйста, проверьте это.",
     "new_message_in_chat_plz_check":"Новое сообщение (я) в модуле чата. Пожалуйста, перейдите в ЧАТ (ссылка), чтобы проверить свои сообщения.",
     "remove_inquiry":"Удалить запрос?",
-
     "archive_item":"Архивный элемент",
 		"do_u_really_want_archive_item":"Вы действительно хотите заархивировать объект?",
 		"delete_item":"Удалить пункт",
@@ -1201,6 +1200,8 @@
     "cancel_subscription":"Отменить подписку",
 		"r_u_want_cancel_sub":"Вы действительно хотите отменить подписку?",
     "email_rcv_update_reciept":"По электронной почте вы будете получать обновления и квитанции на",
-    "upload_license_is" :"Загруженная лицензия"
+    "upload_license_is" :"Загруженная лицензия",
+    "less_than_err":"Пожалуйста, загрузите изображения менее 6",
+		"err_file_formart": "Система не поддерживает этот формат файла"
   }
 }
