--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -1204,6 +1204,8 @@
 		"cancel_subscription":"Cancelar la suscripción",
 		"r_u_want_cancel_sub":"¿Realmente quieres cancelar la suscripción?",
 		"email_rcv_update_reciept":"Correo electrónico en el que recibirá actualizaciones y recibos",
-		"upload_license_is" :"La licencia cargada es"
+		"upload_license_is" :"La licencia cargada es",
+		"less_than_err":"Sube imágenes de menos de 6",
+		"err_file_formart": "El sistema no es compatible con este formato de archivo"
 	}
 }
