--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1200,6 +1200,8 @@
 		"cancel_subscription":"Kündigen Sie das Abonnement",
 		"r_u_want_cancel_sub":"Möchten Sie das Abonnement wirklich kündigen?",
 		"email_rcv_update_reciept":"E-Mail erhalten Sie Updates und Quittungen auf",
-		"upload_license_is" :"Hochgeladene Lizenz ist"
+		"upload_license_is" :"Hochgeladene Lizenz ist",
+		"less_than_err":"Bitte laden Sie Bilder mit weniger als 6 . hoch",
+		"err_file_formart": "System wird dieses Dateiformat nicht unterstützt"
 	}
 }
